Update Form, Fix spacing issues

--- a/css_layout.css
+++ b/css_layout.css
@@ -270,7 +270,6 @@ div.top div{
 
 div.top img{
   width: 100%;
-  margin: auto;
 }
 
 div.top p{
@@ -297,14 +296,14 @@ section#schedule h1{
 }
 
 div#contact {
-  flex: 1 1 auto;
+  flex: auto;
   width: 40%;
   margin: auto;
   padding: 1em;
 }
 
 div#contact figure {
-  flex: 1 1 auto;
+  flex: auto;
   width: 40%;
   margin: auto;
 }
@@ -321,7 +320,7 @@ img#headshot {
 }
 
 table#calendar {
-  flex: 1 1 auto;
+  flex: auto;
   width: 60%;
 }
 
@@ -344,34 +343,34 @@ fieldset#details {
 }
 
 div#fColumn1 {
-  flex: 1 1 auto;
+  flex: auto;
   width: 25%;
 }
 
 div#fColumn2 {
-  flex: 1 1 auto;
+  flex: auto;
   width: 25%;
 }
 
 div#fColumn3 {
-  flex: 1 1 auto;
+  flex: auto;
   width: 50%;
 }
 
 div.fRow {
-  flex: 1 1 auto;
+  flex: auto;
   width: 90%;
   padding: 0.5em;
 }
 
 textarea {
-  flex: 1 1 auto;
+  flex: auto;
   width: 100%;
   height: 10em;
 }
 
 div#buttons {
-  flex: 1 1 auto;
+  flex: auto;
   width: 40%;
   margin-left: auto;
 }
@@ -379,7 +378,7 @@ div#buttons {
 /*Responsive Features*/
 
 @media only screen and (max-width: 769px) {
-  .column {
+  div.column {
     flex: 1 2 auto;
     max-width: 50%;
   }
@@ -427,7 +426,7 @@ div#buttons {
     width: 80%;
   }
 
-  .column {
+  div.column {
     flex: 2 1 auto;
     max-width: 100%;
   }
